--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@
 server.port=2018
 #spring.application.name=wangq
 #  ˝æ›‘¥≈‰÷√
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=wangqing
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+mapper.mappers=tk.mybatis.mapper.common.Mapper
+mapper.notEmpty=true
